src/app/d2-loadout-builder/generated-sets/GeneratedSet.m.scss
@import '../../../scss/variables.scss';

.build {
  box-sizing: border-box;
  padding: 10px 0 4px 0;
  border-bottom: 1px solid #555;

  @include phone-portrait {
    padding-left: 12px;
    padding-right: 12px;
  }
}

.light {
  composes: light from global;
  float: none;

  :global(.app-icon) {
    font-size: 10px;
    vertical-align: -0.125em;
    margin-right: 0;
  }
}

.header {
  color: #ddd;
  display: flex;
  justify-content: space-between;
  padding-bottom: 8px;
  align-items: center;

  img {
    vertical-align: middle;
    height: 16px;
    width: 16px;
  }
}

.segment {
  &::after {
    content: ' | ';
  }
}

.items {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  padding: 0;

  @include phone-portrait {
    flex-direction: column;
  }

  > * {
    margin-right: 16px;
    margin-bottom: 16px;
    &:last-child {
      margin-right: 0;
    }
  }
}

